# fastapi-challenge

./: .env.example  Dockerfile  README.md  database.db  docker-compose.yaml  pyproject.toml
backend/: database.db  pyproject.toml
backend/src/: security.py
backend/src/api/v1/: router.py
backend/src/api/v1/controllers/: users.py
backend/src/api/v1/services/: counters.py  users.py
backend/src/api/v1/webhooks/: counters.py
backend/src/models/: counter.py  token.py  user.py
frontend/: .flake8  dockerfile  pyproject.toml
frontend/src/: app.py
src/: app.py  config.py  main.py
src/api/v1/jobs/: jobs.py
src/database/: db.py  schema.py
src/models/: enums.py
