[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Pei <perezcastagnino.andres@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
streamlit-aggrid = "^1.0.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
